added netlify to html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <h1>
-        Hosted with
+        Hosted with Netlify
         <a href="https://www.netlify.com">Netlify</a>
       </h1>
       <a href="mailto:matt@delac.io" class="btn btn-primary contact-btn"
